modules/networking/routes.tf
resource "aws_route_tables" "public" {
    vpc_id = aws_vpc.public.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = merge(var.tags, {
        Name = "${var.env}-public-route-table"
    })
}

resource "aws_route_tables" "private" {
    vpc_id = aws_vpc.private.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }

    tags = merge(var.tags, {
        Name = "${var.env}-private-route-table"
    })
}

resource "aws_route_table_association" "public" {
    for_each = aws_subnet.public

    subnet_id = each.value.id
    route_table_id = aws_route_tables.public.id
}

resource "aws_route_table_association" "private" {
    for_each = aws_subnet.private

    subnet_id = each.value.id
    route_table_id = aws_route_tables.private.id
}
